<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itTrangChu"
            android:icon="@drawable/trangchu"
            android:title="@string/trangchu"></item>
        <item
            android:id="@+id/itThucDon"
            android:icon="@drawable/logodangnhap"
            android:title="@string/thucdon"></item>
        <item
            android:icon="@drawable/nhanvien"
            android:title="@string/nhanvien"></item>
        <item
            android:icon="@drawable/thongke"
            android:title="@string/thongke"></item>
        <item
            android:icon="@drawable/caidat"
            android:title="@string/caidat"></item>
    </group>
</menu>