<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDangnhap">
    <TextView
        android:textStyle="bold"
        android:textColor="@color/colorGray"
        android:layout_above="@+id/lnKhungDangNhap"
        android:textSize="@dimen/size30sp"
        android:text="@string/dangnhap"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>
    <ImageView
        android:layout_marginTop="@dimen/size80dp"
        android:layout_alignRight="@id/lnKhungDangNhap"
        android:src="@drawable/logodangnhap"
        android:layout_width="@dimen/size150dp"
        android:layout_height="@dimen/size150dp"></ImageView>
    <LinearLayout
        android:id="@+id/lnKhungDangNhap"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edTenDangNhapDN"
            android:padding="@dimen/size10dp"
            android:hint="@string/tendangnhap"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/white"
            android:textColorHint="@color/colorGray"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size10dp"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="wrap_content"></EditText>
        <EditText
            android:id="@+id/edMatKhauDN"
            android:singleLine="true"
            android:padding="@dimen/size10dp"
            android:hint="@string/nhapmatkhau"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/white"
            android:textColorHint="@color/colorGray"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/size10dp"
            android:password="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
        <Button
            android:textStyle="bold"
            android:id="@+id/btnDongYDN"
            android:background="@color/colorRed"
            android:text="@string/dongy"
            android:padding="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Button>
        <Button
            android:textStyle="bold"
            android:id="@+id/btnDangKyDN"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:text="@string/dangky"
            android:padding="@dimen/size10dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Button>
    </LinearLayout>
</RelativeLayout>